target/classes/META-INF/fabric8/openshift/springboot-camel-ws-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=springboot-camel-ws&var-version=1.0-SNAPSHOT
  labels:
    app: springboot-camel-ws
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: org.hui.training
  name: springboot-camel-ws
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: springboot-camel-ws
    provider: fabric8
    group: org.hui.training
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=springboot-camel-ws&var-version=1.0-SNAPSHOT
      labels:
        app: springboot-camel-ws
        provider: fabric8
        version: 1.0-SNAPSHOT
        group: org.hui.training
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: springboot-camel-ws:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: springboot-camel-ws:latest
    type: ImageChange
