target/classes/META-INF/fabric8/openshift/springboot-camel-ws-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: springboot-camel-ws
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: org.hui.training
  name: springboot-camel-ws
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: springboot-camel-ws
